# MetisMedia

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 001_initial_schema.py  002_runs_table.py  003_briefing_sessions.py
scripts/: demo_run.py
src/metismedia/: __init__.py  main.py  settings.py
src/metismedia/api/: __init__.py  node_a.py
src/metismedia/app/: __init__.py
src/metismedia/app/contracts/: __init__.py  enums.py  models.py
src/metismedia/contracts/: __init__.py  enums.py  events.py  models.py  reasons.py
src/metismedia/core/: __init__.py  budget.py  ledger.py
src/metismedia/db/: __init__.py  engine.py  session.py  types.py
src/metismedia/events/: __init__.py  bus.py  constants.py  envelope.py  handlers.py  idemkeys.py  idempotency.py  worker.py
src/metismedia/nodes/: __init__.py
src/metismedia/orchestration/: __init__.py  handlers.py  orchestrator.py  registry.py  run_models.py  runtime.py
src/metismedia/orchestrator/: __init__.py  nodes.py  orchestrator.py  registry.py  runtime.py
src/metismedia/providers/: __init__.py  embedding_provider.py  node_a_provider.py  pulse_provider.py
tests/: conftest.py  test_budget_guard.py  test_contracts.py  test_contracts_core.py  test_cost_ledger.py  test_db_smoke.py  test_demo_run_e2e.py  test_event_bus_roundtrip.py  test_event_envelope.py  test_event_idempotency.py  test_event_retry_dlq.py  test_handlers_budget.py  test_main.py  test_node_a_api.py  test_node_b_integration.py  test_node_b_pulse_cache.py  test_node_b_scoring.py  test_node_b_third_rail.py  test_orchestration_models.py  test_repo_invariants.py  test_repos_db.py  test_reservation_atomicity.py  test_settings.py  test_worker_ledger.py
(+20 files in other folders)
